# WinPulse

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/winpulse/: __init__.py  main.py
