[project]
name = "winpulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mayank170906", email = "mayankchoudharysept17@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
