[project]
name = "winpulse"
version = "0.1.0"
description = "Cross-platform light system metric telemetry engine"
readme = "README.md"
authors = [
    { name = "Mayank170906", email = "mayankchoudharysept17@gmail.com" }
]
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
winpulse = "winpulse.main:main"